# voice-pro

./: .gitignore  README.md  configure.sh  one_click.py  pyproject.toml  requirements-voice-cpu.txt  start-abus.py  start-voice.py  start.sh  uninstall.sh  update.sh
app/: abus_aicover.py  abus_app_aria.py  abus_app_gulliver.py  abus_app_kara.py  abus_app_voice.py  abus_asr_faster_whisper.py  abus_asr_parameters.py  abus_asr_whisper.py  abus_asr_whisper_timestamped.py  abus_asr_whisperx.py  abus_audio.py  abus_batch.py  abus_config.py  abus_demucs.py  abus_downloader.py  abus_ffmpeg.py  abus_files.py  abus_genuine.py  abus_hf.py  abus_hf_file.py  abus_live.py  abus_mdx.py  abus_nlp_spacy.py  abus_nlp_stanza.py  abus_path.py  abus_rvc.py  abus_subtitle.py  abus_text.py  abus_translate_azure.py  abus_translate_deep.py  abus_tts_azure.py  abus_tts_cosyvoice.py  abus_tts_edge.py  abus_tts_f5.py  abus_tts_kokoro.py  abus_tts_rvc.py  abus_voice_celeb.py  abus_voice_kokoro.py  abus_voice_ms.py  config-user.json5  (+32 more)
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/dataset/: dataset.py  processor.py
cosyvoice/flow/: decoder.py  flow.py  flow_matching.py
cosyvoice/hifigan/: discriminator.py  generator.py
cosyvoice/llm/: llm.py
cosyvoice/tokenizer/: tokenizer.py
cosyvoice/transformer/: decoder.py  decoder_layer.py  encoder.py  upsample_encoder.py
cosyvoice/utils/: class_utils.py  common.py  executor.py  file_utils.py  mask.py  scheduler.py  train_utils.py
docs/: README.deu.md  README.eng.md  README.jpn.md  README.kor.md  README.por.md  README.spa.md  README.tw.md  README.zh.md  index.html
rvc/infer/: infer.py
src/: config.py  progressListener.py  shared.py  ui.py  vad.py  whisperProgressHook.py
src/aicover/: mdx.py  rvc.py  trainset_preprocess_pipeline_print.py  vc_infer_pipeline.py
src/aicover/infer_pack/: attentions.py  models.py  models_onnx.py  models_onnx_moess.py
src/demucs/: api.py  apply.py  audio.py  augment.py  demucs.py  distrib.py  evaluate.py  hdemucs.py  htdemucs.py  pretrained.py  repitch.py  repo.py  separate.py  solver.py  states.py  svd.py  train.py  utils.py  wav.py
src/demucs/grids/: _explorers.py  mdx.py  mdx_extra.py  mdx_refine.py  mmi.py  mmi_ft.py  repro.py  repro_ft.py  sdx23.py
src/i18n/: i18n.py
src/i18n/locale/: de_DE.json  (+7 more)
