[project]
name = "voice-pro"
version = "3.0.0"
description = "Linux-only Voice-Pro runtime"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "structlog",
    "py-cpuinfo==9.0.0",
    "wget",
    # Whisper / ASR
    "openai-whisper==20250625",
    "faster-whisper>=1.2,<1.3",
    "whisperx>=3.8,<3.9",
    "whisper-timestamped==1.15.8",
    "matplotlib",
    "ffmpeg-python==0.2.0",
    # Demucs
    "demucs==4.0.1",
    "invisible-watermark",
    "fonts",
    "font-roboto",
    # Web UI
    "gradio==5.14.0",
    "numpy>=2.2.2,<2.3",
    "pydantic==2.9.1",
    "yt-dlp==2025.11.12",
    "browser-cookie3",
    "json5",
    "more-itertools",
    "pyyaml",
    "pandas>=2.2.3,<2.3",
    "huggingface-hub>=0.28.1,<1",
    "cached-path==1.8.10",
    # Installer / one-click helpers
    "tqdm",
    "markdown",
    "rich",
    "ntplib",
    "ninja",
    # TTS / translation
    "edge-tts",
    "python-iso639",
    "deep-translator",
    "pysubs2",
    "lingua-language-detector",
    # Live audio
    "soundcard",
    "soundfile",
    "websockets",
    "websocket-client",
    "kaldialign",
    "librosa>=0.11,<0.12",
    "jiwer",
    "evaluate",
    "azure-ai-translation-text==1.0.0b1",
    "azure-cognitiveservices-speech",
    "uuid",
    "pydub==0.25.1",
    "f5-tts==1.1.10",
    # PyTorch CPU wheels come from the explicit uv index below.
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    # CosyVoice
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "gdown==5.1.0",
    "grpcio>=1.66.2,<2",
    "grpcio-tools>=1.66.2,<2",
    "HyperPyYAML==1.2.2",
    "inflect==7.3.1",
    "lightning>=2.6,<2.7",
    "modelscope==1.15.0",
    "tensorboard==2.14.0",
    "fastapi-cli==0.0.4",
    "WeTextProcessing==1.2.0",
    "kokoro",
    "misaki[en]",
    "misaki[ja]",
    "misaki[zh]",
    # spaCy
    "spacy>=3.8.7,<3.9",
    # Runtime extras
    "onnxruntime==1.27.0",
    "python-dotenv",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
